<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kotime</string>
    <string name="add_record_button">Add record</string>
    <string name="action_descriptions_hint">Description</string>
    <string name="stats">Statistics</string>
    <string name="precentage" translatable="false">%d%%</string>
    <string name="minus" translatable="false">-5</string>
    <string name="plus" translatable="false">+5</string>
    <string name="start_time_picker_title">Start</string>
    <string name="end_time_picker_title">End</string>
    <string name="category">Category</string>
    <string name="goal_label">Goal:</string>
    <string name="none_goal">Without goal</string>
    <string name="increase_goal">Increase spends</string>
    <string name="decrease_goal">Decrease spends</string>
    <string name="done_button">Done</string>
    <string name="duration_with_correction" translatable="false">%s (%s)</string>
    <string name="total_time">Total %s</string>
    <string name="timer_title">Timer</string>
    <string name="records_title">Records</string>
    <string name="stats_title">Statistics</string>
    <string name="categories_title">Categories</string>
    <string name="time_from">From</string>
    <string name="time_to">To</string>
    <string name="Duration">Duration</string>
    <string name="goal_stats_header">Goals</string>
    <string name="category_stats_header">Categories</string>
    <string name="error_screen_title">Something Not Right</string>
    <string name="error_screen_text">Sorry. There is some technical issues.\nTry to restart the app.</string>
    <string name="send_report">Send report</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase">Ok</string>
    <string name="support_email" translatable="false">dev.alex.kor@gmail.com</string>
    <string name="support_email_subject">Bug report</string>
    <string name="support_email_body">Please tell me about the bug or just send me this stacktrace.\n\nSummary:\n\nSteps to reproduce:\n\nStacktrace:\n%s</string>
    <string name="email_chooser_title">Send Email</string>
    <string name="stop_timer_dialog_title">Stop the timer?</string>
    <string name="stop_timer_dialog_message">The timer will be reset</string>
    <string name="future_time_error">Must be in the past.</string>
    <string name="start_before_end_error">Must start before the end.</string>
    <string name="overlap_dialog_title">Overlap</string>
    <string name="overlap_dialog_message">This record will overlap some other records. Continue?</string>
    <string name="overlap_dialog_positive_button">overlap it</string>
    <string name="contribute_title">Contribute</string>
    <string name="contribute_text1">If you would like to support this project, there is a several options:</string>
    <string name="contribute_text2">I\'ll be greatly appreciate any help. Thank\u00A0you!</string>
    <string name="rate_button">Rate</string>
    <string name="about_title">About</string>
    <string name="share_button">Share</string>
    <string name="version">Version %s</string>
    <string name="about_description">This app helps me to be more productive and less lazy. I\u00A0hope it would be useful for you too.</string>
    <string name="suggest_improvement_button">Suggest improvement</string>
    <string name="improvement_email_subject" translatable="false">Improvement suggestion</string>
    <string name="developer">Developer</string>
    <string name="special_thanks">Special thanks:\n-</string>
    <string name="color_label">Color</string>
</resources>
