<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/part_edit_text_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/goal_label"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/goal_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/none_goal_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none_goal" />

            <RadioButton
                android:id="@+id/increase_goal_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/increase_goal" />

            <RadioButton
                android:id="@+id/decrease_goal_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decrease_goal" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>