<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/part_edit_text_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/category"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/category_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Без дела" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/Duration"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ru.softstone.kotime.presentation.common.HoldRepeatButton
                        android:id="@+id/minus_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_edit"
                        android:text="@string/minus"
                        android:textSize="16sp"
                        app:strokeColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/duration_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        tools:text="12:34" />

                    <ru.softstone.kotime.presentation.common.HoldRepeatButton
                        android:id="@+id/plus_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_edit"
                        android:text="@string/plus"
                        android:textSize="16sp"
                        app:strokeColor="@color/colorAccent" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/time_from"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/start_date_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        android:textSize="16sp"
                        tools:text="вс, 7 апреля" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/start_time_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        android:textSize="16sp"
                        tools:text="19:39" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/time_to"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/end_date_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        android:textSize="16sp"
                        tools:text="вс, 7 апреля" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/end_time_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        android:textSize="16sp"
                        tools:text="19:39" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>