<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:tint="@color/iconColorOnPrimary"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/contribute_title"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contribute_text1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/rate_button"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:textColor="@color/button_background"
        android:textSize="16sp"
        app:strokeColor="@color/button_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/donate3_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        tools:text="9.99 $"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:textColor="@color/button_background"
        android:textSize="16sp"
        app:strokeColor="@color/button_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/donate2_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        tools:text="4,99 $"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:textColor="@color/button_background"
        android:textSize="16sp"
        app:strokeColor="@color/button_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/donate1_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        tools:text="2,99 $"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:textColor="@color/button_background"
        android:textSize="16sp"
        app:strokeColor="@color/button_background" />

</LinearLayout>